crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__arith_enum.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: "rustfmt(derive_accessor!(&input, \"regions\", kirin_ir::Region,\nkirin_ir::HasRegions))"
---
impl<'a, T> ::kirin::ir::kirin_ir::HasRegions<'a> for ArithInstruction<T> {
    type Iter = ArithInstructionRegionsIter<'a>;
    fn regions(&'a self) -> Self::Iter {
        match self {
            ArithInstruction::Add(field_0, field_1, field_2, field_3, ..) => {
                ArithInstructionRegionsIter::Add(std::iter::empty::<
                    &'a ::kirin::ir::kirin_ir::Region,
                >())
            }
            ArithInstruction::Sub(field_0, field_1, field_2, field_3, ..) => {
                ArithInstructionRegionsIter::Sub(std::iter::empty::<
                    &'a ::kirin::ir::kirin_ir::Region,
                >())
            }
            ArithInstruction::Mul(field_0, field_1, field_2, ..) => {
                ArithInstructionRegionsIter::Mul(std::iter::empty::<
                    &'a ::kirin::ir::kirin_ir::Region,
                >())
            }
            ArithInstruction::Div(field_0, field_1, field_2, ..) => {
                ArithInstructionRegionsIter::Div(std::iter::empty::<
                    &'a ::kirin::ir::kirin_ir::Region,
                >())
            }
        }
    }
}
pub enum ArithInstructionRegionsIter<'a> {
    Add(std::iter::Empty<&'a ::kirin::ir::kirin_ir::Region>),
    Sub(std::iter::Empty<&'a ::kirin::ir::kirin_ir::Region>),
    Mul(std::iter::Empty<&'a ::kirin::ir::kirin_ir::Region>),
    Div(std::iter::Empty<&'a ::kirin::ir::kirin_ir::Region>),
}
impl<'a> Iterator for ArithInstructionRegionsIter<'a> {
    type Item = &'a ::kirin::ir::kirin_ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            ArithInstructionRegionsIter::Add(iter) => iter.next(),
            ArithInstructionRegionsIter::Sub(iter) => iter.next(),
            ArithInstructionRegionsIter::Mul(iter) => iter.next(),
            ArithInstructionRegionsIter::Div(iter) => iter.next(),
        }
    }
}
