crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__either_enum.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: generate(input)
---
impl<'a, T> kirin_ir::HasArguments<'a> for TestEnum<T> {
    type Iter = ArgumentsIter<'a, kirin_ir::SSAValue>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => ArgumentsIter::VariantA(
                <InnerStructA<T> as kirin_ir::HasArguments>::arguments(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => ArgumentsIter::VariantB(
                <InnerStructB as kirin_ir::HasArguments>::arguments(field_0),
            ),
            TestEnum::VariantC { a, c, .. } => {
                ArgumentsIter::VariantC(std::iter::once(a).chain(std::iter::once(c)))
            }
            TestEnum::VariantD(field_0, field_1, field_2, ..) => {
                ArgumentsIter::VariantD(std::iter::once(field_0).chain(std::iter::once(field_2)))
            }
        }
    }
}
pub enum ArgumentsIter<'a, T> {
    VariantA(<InnerStructA<T> as kirin_ir::HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as kirin_ir::HasArguments<'a>>::Iter),
    VariantC(
        std::iter::Chain<
            std::iter::Once<&'a kirin_ir::SSAValue>,
            std::iter::Once<&'a kirin_ir::SSAValue>,
        >,
    ),
    VariantD(
        std::iter::Chain<
            std::iter::Once<&'a kirin_ir::SSAValue>,
            std::iter::Once<&'a kirin_ir::SSAValue>,
        >,
    ),
}
impl<'a, T> Iterator for ArgumentsIter<'a, T> {
    type Item = &'a kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            ArgumentsIter::VariantA(iter) => iter.next(),
            ArgumentsIter::VariantB(iter) => iter.next(),
            ArgumentsIter::VariantC(iter) => iter.next(),
            ArgumentsIter::VariantD(iter) => iter.next(),
        }
    }
}
