crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__global_enum_wrapper.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: generate(input)
---
impl<'a, T> kirin_ir::HasArguments<'a> for TestEnum<T> {
    type Iter = ArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => ArgumentsIter::VariantA(
                <InnerStructA<T> as kirin_ir::HasArguments>::arguments(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => ArgumentsIter::VariantB(
                <InnerStructB as kirin_ir::HasArguments>::arguments(field_0),
            ),
        }
    }
}
pub enum ArgumentsIter<'a, T> {
    VariantA(<InnerStructA<T> as kirin_ir::HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as kirin_ir::HasArguments<'a>>::Iter),
}
impl<'a, T> Iterator for ArgumentsIter<'a, T> {
    type Item = &'a kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            ArgumentsIter::VariantA(iter) => iter.next(),
            ArgumentsIter::VariantB(iter) => iter.next(),
        }
    }
}
