crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__named_struct_wrapper.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArguments<'a> for TestStruct<T> {
    type Iter = <InnerStruct<T> as ::kirin::ir::HasArguments>::Iter;
    fn arguments(&'a self) -> Self::Iter {
        let Self { wrapped, .. } = self;
        <InnerStruct<T> as ::kirin::ir::HasArguments>::arguments(wrapped)
    }
}
