crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__unit_struct.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: generate(input)
---
impl<'a> kirin_ir::HasArguments<'a> for TestStruct {
    type Iter = std::iter::Empty<&'a ()>;
    fn arguments(&'a self) -> Self::Iter {
        std::iter::empty()
    }
}
