crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__unnamed_struct_regular.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: generate(input)
---
impl<'a> ::kirin::ir::HasArguments<'a> for TestStruct {
    type Iter = std::iter::Chain<
        std::iter::Chain<
            std::iter::Once<&'a ::kirin::ir::SSAValue>,
            std::iter::Once<&'a ::kirin::ir::SSAValue>,
        >,
        std::iter::Once<&'a ::kirin::ir::SSAValue>,
    >;
    fn arguments(&'a self) -> Self::Iter {
        let Self(field_0, field_1, field_2, ..) = self;
        std::iter::once(field_0)
            .chain(std::iter::once(field_1))
            .chain(std::iter::once(field_2))
    }
}
