crates/kirin-derive-core/src/snapshots/kirin_derive_core__field__tests__unnamed_struct_wrapper.snap
---
source: crates/kirin-derive-core/src/field.rs
expression: generate(input)
---
impl<'a, T> kirin_ir::HasArguments<'a> for TestStruct<T> {
    type Iter = std::iter::Chain<
        std::iter::Once<&'a kirin_ir::SSAValue>,
        std::iter::Once<&'a kirin_ir::SSAValue>,
    >;
    fn arguments(&'a self) -> Self::Iter {
        let Self(field_0, field_1, field_2, field_3, field_4, ..) = self;
        std::iter::once(field_0).chain(std::iter::once(field_2))
    }
}
